--- a/Open in browser.html
+++ b/Open in browser.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <P> Hello browser </P>
+        <P> Hello browser save my life </P>
     </body>
 </html>
