--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>
             Open in browser bro 
         </title>
     </head>
     <body>
-        <P> Hello browser save my life </P>
+        <P id='paragraph'> browser save my life </P>
     </body>
 </html>
