--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         </title>
     </head>
     <body>
-        <P id='paragraph'> browser save my life </P>
+        <P id= paragraph > browser save my life </P>
     </body>
 </html>
