--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="first_website/css/style.css">
+        <link rel="stylesheet" href="/first_website/css/style.css">
         <title>
             Open in browser bro 
         </title>
